@@ -1,4 +1,6 @@
 1.2.1
+ * apply disk_failure_policy to bad disks on initial directory creation 
+   (CASSANDRA-4847)
  * Optimize name-based queries to use ArrayBackedSortedColumns (CASSANDRA-5043)
  * Fall back to old manifest if most recent is unparseable (CASSANDRA-5041)
  * pool [Compressed]RandomAccessReader objects on the partitioned read path
